--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "chroma-js": "^2",
     "dayjs": "^1",
     "dexie": "^3",
+    "diff": "^5.2.0",
     "fast-deep-equal": "^3",
     "gpt-tokenizer": "^2",
     "i18next": "^23",
@@ -156,6 +157,7 @@
     "@testing-library/jest-dom": "^6",
     "@testing-library/react": "^14",
     "@types/chroma-js": "^2",
+    "@types/diff": "^5.0.9",
     "@types/json-schema": "^7",
     "@types/lodash": "^4",
     "@types/lodash-es": "^4",
