🔧 chore: add sentry monitor

--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@lobehub/icons": "^1.13.0",
     "@lobehub/tts": "latest",
     "@lobehub/ui": "^1.129.2",
+    "@sentry/nextjs": "^7.105.0",
     "@vercel/analytics": "^1",
     "ahooks": "^3",
     "ai": "^3.0.0",
