--- a/package.json
+++ b/package.json
@@ -88,9 +88,9 @@
     "@icons-pack/react-simple-icons": "^9",
     "@lobehub/chat-plugin-sdk": "latest",
     "@lobehub/chat-plugins-gateway": "latest",
-    "@lobehub/icons": "^1.13.0",
+    "@lobehub/icons": "latest",
     "@lobehub/tts": "latest",
-    "@lobehub/ui": "^1.129.2",
+    "@lobehub/ui": "latest",
     "@vercel/analytics": "^1",
     "ahooks": "^3",
     "ai": "^3.0.0",
