--- a/package.json
+++ b/package.json
@@ -204,7 +204,7 @@
     "typescript": "^5",
     "unified": "^11",
     "unist-util-visit": "^5",
-    "vite": "5.1.6",
+    "vite": "^5",
     "vitest": "~1.2.2",
     "vitest-canvas-mock": "^0.3"
   },
