--- a/.env.example
+++ b/.env.example
@@ -100,6 +100,12 @@ OPENAI_API_KEY=sk-xxxxxxxxx
 #OPENROUTER_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 ########################################
+######### 01AI Service ##########
+########################################
+
+#ZEROONEAI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+########################################
 ############ Market Service ############
 ########################################
 
