♻️ refactor: refactor the console with debug

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "brotli-wasm": "^2",
     "chroma-js": "^2",
     "dayjs": "^1",
+    "debug": "^4",
     "dexie": "^3",
     "diff": "^5",
     "fast-deep-equal": "^3",
@@ -167,6 +168,7 @@
     "@testing-library/jest-dom": "^6",
     "@testing-library/react": "^14",
     "@types/chroma-js": "^2",
+    "@types/debug": "^4.1.12",
     "@types/diff": "^5",
     "@types/json-schema": "^7",
     "@types/lodash": "^4",
