--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,8 @@ jobs:
 
       - name: Install bun
         uses: oven-sh/setup-bun@v1
+        with:
+            bun-version: ${{ secrets.BUN_VERSION }}
 
       - name: Install deps
         run: bun i
