--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "i18n": "npm run workflow:i18n && lobe-i18n",
     "i18n:docs": "lobe-i18n md && npm run workflow:docs",
     "lint": "npm run lint:ts && npm run lint:style && npm run type-check && npm run lint:circular",
-    "lint:circular": "dpdm src/**/*.ts  --warning false  --tree false  --exit-code circular:1  -T true",
+    "lint:circular": "dpdm src/**/*.ts  --warning false  --tree false  --exit-code circular:1  -T true --skip-dynamic-imports circular",
     "lint:md": "remark . --quiet --frail --output",
     "lint:mdx": "eslint \"{contributing,docs}/**/*.mdx\" --fix",
     "lint:style": "stylelint \"{src,tests}/**/*.{js,jsx,ts,tsx}\" --fix",
