💄 fix: PR 01.AI review issue

--- a/.env.example
+++ b/.env.example
@@ -100,10 +100,10 @@ OPENAI_API_KEY=sk-xxxxxxxxx
 #OPENROUTER_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 ########################################
-######### 01AI Service ##########
+######### 01.AI Service ##########
 ########################################
 
-#ZEROONEAI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+#ZEROONEAI_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 ########################################
 ############ Market Service ############
