📝 docs: Update mdx docs seo

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "lint": "npm run lint:ts && npm run lint:style && npm run type-check && npm run lint:circular",
     "lint:circular": "dpdm src/**/*.ts  --warning false  --tree false  --exit-code circular:1  -T true --skip-dynamic-imports circular",
     "lint:md": "remark . --quiet --frail --output",
-    "lint:mdx": "eslint \"{contributing,docs}/**/*.mdx\" --fix",
+    "lint:mdx": "eslint \"{contributing,docs}/**/*.mdx\" --quiet --fix",
     "lint:style": "stylelint \"{src,tests}/**/*.{js,jsx,ts,tsx}\" --fix",
     "lint:ts": "eslint \"{src,tests}/**/*.{js,jsx,ts,tsx}\" --fix",
     "prepare": "husky",
@@ -62,6 +62,7 @@
       "prettier --write --no-error-on-unmatched-pattern"
     ],
     "*.mdx": [
+      "npm run workflow:mdx",
       "eslint --fix --quiet"
     ],
     "*.json": [
