🔧 chore: Add seo srcipts

--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "build:analyze": "ANALYZE=true next build",
     "build:docker": "DOCKER=true next build && npm run build-sitemap",
     "dev": "next dev -p 3010",
-    "docs": "lobe-i18n md && npm run workflow:docs",
     "i18n": "npm run workflow:i18n && lobe-i18n",
     "i18n:docs": "lobe-i18n md && npm run workflow:mdx && npm run lint:mdx",
     "lint": "npm run lint:ts && npm run lint:style && npm run type-check && npm run lint:circular",
@@ -45,6 +44,7 @@
     "prettier": "prettier -c --write \"**/**\"",
     "pull": "git pull",
     "release": "semantic-release",
+    "seo": "lobe-seo && npm run workflow:docs && npm run lint:mdx",
     "start": "next start",
     "stylelint": "stylelint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "test": "vitest",
