📝 docs: Fix auth0.zh-CN.mdx

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "build:docker": "DOCKER=true next build && npm run build-sitemap",
     "dev": "next dev -p 3010",
     "i18n": "npm run workflow:i18n && lobe-i18n",
-    "i18n:docs": "lobe-i18n md && npm run workflow:mdx && npm run lint:mdx",
+    "i18n:docs": "lobe-i18n md && npm run workflow:docs && npm run lint:mdx",
     "lint": "npm run lint:ts && npm run lint:style && npm run type-check && npm run lint:circular",
     "lint:circular": "dpdm src/**/*.ts  --warning false  --tree false  --exit-code circular:1  -T true --skip-dynamic-imports circular",
     "lint:md": "remark . --quiet --frail --output",
@@ -44,7 +44,7 @@
     "prettier": "prettier -c --write \"**/**\"",
     "pull": "git pull",
     "release": "semantic-release",
-    "seo": "lobe-seo && npm run workflow:docs && npm run lint:mdx",
+    "seo": "lobe-seo && npm run workflow:mdx && npm run lint:mdx",
     "start": "next start",
     "stylelint": "stylelint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "test": "vitest",
