--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "modern-screenshot": "^4",
     "nanoid": "^5",
     "next": "^14.1",
-    "next-auth": "beta",
+    "next-auth": "5.0.0-beta.15",
     "next-sitemap": "^4",
     "numeral": "^2",
     "nuqs": "^1",
