--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -49,6 +49,6 @@ jobs:
 
             ![](https://github-production-user-asset-6210df.s3.amazonaws.com/17870709/273954625-df80c890-0822-4ac2-95e6-c990785cbed5.png)
 
-            [lobechat]: https://github.com/aipuz/chat-hw-baby
-            [tutorial-zh-CN]: https://github.com/aipuz/chat-hw-baby/wiki/Upstream-Sync.zh-CN
-            [tutorial-en-US]: https://github.com/aipuz/chat-hw-baby/wiki/Upstream-Sync
+            [lobechat]: https://github.com/lobehub/lobe-chat
+            [tutorial-zh-CN]: https://github.com/lobehub/lobe-chat/wiki/Upstream-Sync.zh-CN
+            [tutorial-en-US]: https://github.com/lobehub/lobe-chat/wiki/Upstream-Sync
