--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "@anthropic-ai/sdk": "^0.18.0",
     "@auth/core": "0.28.0",
     "@aws-sdk/client-bedrock-runtime": "^3.549.0",
-    "@azure/openai": "1.0.0-beta.12",
+    "@azure/openai": "^1.0.0-beta.12",
     "@cfworker/json-schema": "^1.12.8",
     "@google/generative-ai": "^0.3.1",
     "@icons-pack/react-simple-icons": "^9.4.0",
