--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # add a access code to lock your lobe-chat application, you can set a long password to avoid leaking. If this value contains a comma, it is a password array.
-#ACCESS_CODE=lobe66
+# ACCESS_CODE=lobe66
 
 # Specify your API Key selection method, currently supporting `random` and `turn`.
 # API_KEY_SELECT_MODE=random
@@ -16,7 +16,7 @@ OPENAI_API_KEY=sk-xxxxxxxxx
 # OPENAI_PROXY_URL=https://api.openai.com/v1
 
 # add your custom model name, multi model separate by comma. for example gpt-3.5-1106,gpt-4-1106
-#OPENAI_ENABLED_MODELS=gpt-3.5-turbo
+# OPENAI_MODEL_LIST=gpt-3.5-turbo
 
 ########################################
 ######### Azure OpenAI Service #########
@@ -38,35 +38,39 @@ OPENAI_API_KEY=sk-xxxxxxxxx
 ############ ZhiPu AI Service ##########
 ########################################
 
-#ZHIPU_API_KEY=xxxxxxxxxxxxxxxxxxx.xxxxxxxxxxxxx
+# ZHIPU_API_KEY=xxxxxxxxxxxxxxxxxxx.xxxxxxxxxxxxx
 
 ########################################
 ########## Moonshot AI Service #########
 ########################################
 
-#MOONSHOT_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# MOONSHOT_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 ########################################
 ########### Google AI Service ##########
 ########################################
 
-#GOOGLE_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# GOOGLE_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 ########################################
 ######### AWS Bedrock Service ##########
 ########################################
 
-#AWS_REGION=us-east-1
-#AWS_ACCESS_KEY_ID=xxxxxxxxxxxxxxxxxxx
-#AWS_SECRET_ACCESS_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# AWS_REGION=us-east-1
+# AWS_ACCESS_KEY_ID=xxxxxxxxxxxxxxxxxxx
+# AWS_SECRET_ACCESS_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 ########################################
 ######### Ollama AI Service ##########
 ########################################
 
+
+
 # You can use ollama to get and run LLM locally, learn more about it via https://github.com/ollama/ollama
 # The local/remote ollama service url
 # OLLAMA_PROXY_URL=http://127.0.0.1:11434/v1
+
+# OLLAMA_MODEL_LIST=your_ollama_model_names
 
 ########### Mistral AI Service ##########
 ########################################
@@ -95,20 +99,20 @@ OPENAI_API_KEY=sk-xxxxxxxxx
 ######### OpenRouter Service ##########
 ########################################
 
-#OPENROUTER_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-#OPENROUTER_CUSTOM_MODELS=model1,model2,model3
+# OPENROUTER_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# OPENROUTER_MODEL_LIST=model1,model2,model3
 
 ########################################
 ######### 01.AI Service ##########
 ########################################
 
-#ZEROONE_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# ZEROONE_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 ########################################
 ######### TogetherAI Service ##########
 ########################################
 
-#TOGETHERAI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# TOGETHERAI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 ########################################
 ############ Market Service ############
