--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,10 @@
 
 
 ########################################
-############ OpenAI Service ############
+######## Model Provider Service ########
 ########################################
+
+### OpenAI ###
 
 # you openai api key
 OPENAI_API_KEY=sk-xxxxxxxxx
@@ -18,101 +20,86 @@ OPENAI_API_KEY=sk-xxxxxxxxx
 # add your custom model name, multi model separate by comma. for example gpt-3.5-1106,gpt-4-1106
 # OPENAI_MODEL_LIST=gpt-3.5-turbo
 
-########################################
-######### Azure OpenAI Service #########
-########################################
-# you can learn azure OpenAI Service on https://learn.microsoft.com/en-us/azure/ai-services/openai/overview
 
+### Azure OpenAI ###
+
+# you can learn azure OpenAI Service on https://learn.microsoft.com/en-us/azure/ai-services/openai/overview
 # use Azure OpenAI Service by uncomment the following line
 
 # The API key you applied for on the Azure OpenAI account page, which can be found in the "Keys and Endpoints" section.
 # AZURE_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 # The endpoint you applied for on the Azure OpenAI account page, which can be found in the "Keys and Endpoints" section.
-# OPENAI_PROXY_URL=https://docs-test-001.openai.azure.com
+# AZURE_ENDPOINT=https://docs-test-001.openai.azure.com
 
 # Azure's API version, follows the YYYY-MM-DD format
-# AZURE_API_VERSION=2023-08-01-preview
+# AZURE_API_VERSION=2024-02-01
 
-########################################
-############ ZhiPu AI Service ##########
-########################################
 
-# ZHIPU_API_KEY=xxxxxxxxxxxxxxxxxxx.xxxxxxxxxxxxx
+### Anthropic Service ####
 
-########################################
-########## Moonshot AI Service #########
-########################################
+# ANTHROPIC_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-# MOONSHOT_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# use a proxy to connect to the Anthropic API
+# ANTHROPIC_PROXY_URL=https://api.anthropic.com
 
-########################################
-########### Google AI Service ##########
-########################################
+
+### Google AI  ####
 
 # GOOGLE_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-########################################
-######### AWS Bedrock Service ##########
-########################################
+
+### AWS Bedrock  ###
 
 # AWS_REGION=us-east-1
 # AWS_ACCESS_KEY_ID=xxxxxxxxxxxxxxxxxxx
 # AWS_SECRET_ACCESS_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-########################################
-######### Ollama AI Service ##########
-########################################
 
-
+### Ollama AI ####
 
 # You can use ollama to get and run LLM locally, learn more about it via https://github.com/ollama/ollama
+
 # The local/remote ollama service url
 # OLLAMA_PROXY_URL=http://127.0.0.1:11434/v1
 
 # OLLAMA_MODEL_LIST=your_ollama_model_names
 
-########### Mistral AI Service ##########
-########################################
 
-# MISTRAL_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-
-########################################
-######### Perplexity Service ###########
-########################################
-
-# PERPLEXITY_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-
-########################################
-######### Anthropic Service ############
-########################################
-
-# ANTHROPIC_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-
-########################################
-############ Groq Service ##############
-########################################
-
-# GROQ_API_KEY=gsk_xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-
-########################################
-######### OpenRouter Service ##########
-########################################
+### OpenRouter Service ###
 
 # OPENROUTER_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 # OPENROUTER_MODEL_LIST=model1,model2,model3
 
-########################################
-######### 01.AI Service ##########
-########################################
+
+### Mistral AI ###
+
+# MISTRAL_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+### Perplexity Service ###
+
+# PERPLEXITY_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+### Groq Service ####
+
+# GROQ_API_KEY=gsk_xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+#### 01.AI Service ####
 
 # ZEROONE_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-########################################
-######### TogetherAI Service ##########
-########################################
+### TogetherAI Service ###
 
 # TOGETHERAI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+### ZhiPu AI ###
+
+# ZHIPU_API_KEY=xxxxxxxxxxxxxxxxxxx.xxxxxxxxxxxxx
+
+### Moonshot AI  ####
+
+# MOONSHOT_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
 
 ########################################
 ############ Market Service ############
