--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@lobehub/tts": "latest",
     "@lobehub/ui": "^1.137.7",
     "@next/third-parties": "^14.1.4",
+    "@sentry/nextjs": "^7.105.0",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "ahooks": "^3.7.11",
@@ -106,6 +107,7 @@
     "debug": "^4.3.4",
     "dexie": "^3.2.7",
     "diff": "^5.2.0",
+    "drizzle-orm": "^0.30.8",
     "fast-deep-equal": "^3.1.3",
     "gpt-tokenizer": "^2.1.2",
     "i18next": "^23.11.0",
@@ -193,7 +195,9 @@
     "ajv-keywords": "^5.1.0",
     "commitlint": "^19.2.1",
     "consola": "^3.2.3",
+    "dotenv": "^16.4.5",
     "dpdm": "^3.14.0",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8.57.0",
     "eslint-plugin-mdx": "^2.3.4",
     "fake-indexeddb": "^5.0.2",
