--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
     "@anthropic-ai/sdk": "^0.18.0",
+    "@auth/core": "0.28.0",
     "@aws-sdk/client-bedrock-runtime": "^3.556.0",
     "@azure/openai": "^1.0.0-beta.12",
     "@cfworker/json-schema": "^1.12.8",
