--- a/package.json
+++ b/package.json
@@ -179,7 +179,7 @@
     "@next/bundle-analyzer": "^14.2.3",
     "@next/eslint-plugin-next": "^14.2.3",
     "@peculiar/webcrypto": "^1.4.6",
-    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "^15.0.5",
     "@types/chroma-js": "^2.4.4",
     "@types/debug": "^4.1.12",
