⬆️ chore: try to upgrade antd to 5.17.0

--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "ahooks": "^3.7.11",
     "ai": "3.0.19",
-    "antd": "5.16.5",
+    "antd": "^5.17.0",
     "antd-style": "^3.6.2",
     "brotli-wasm": "^3.0.0",
     "chroma-js": "^2.4.2",
@@ -183,7 +183,6 @@
     "@next/bundle-analyzer": "^14.2.3",
     "@next/eslint-plugin-next": "^14.2.3",
     "@peculiar/webcrypto": "^1.4.6",
-    "@rc-component/async-validator": "5.0.3",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.6",
     "@types/chroma-js": "^2.4.4",
