♻️ refactor: refactor file by file and upload for upload to s3

--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     "@anthropic-ai/sdk": "^0.20.9",
     "@auth/core": "0.28.0",
     "@aws-sdk/client-bedrock-runtime": "^3.574.0",
+    "@aws-sdk/client-s3": "^3.577.0",
+    "@aws-sdk/s3-request-presigner": "^3.577.0",
     "@azure/openai": "1.0.0-beta.12",
     "@cfworker/json-schema": "^1.12.8",
     "@clerk/localizations": "2.0.0",
