--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "@icons-pack/react-simple-icons": "^9.5.0",
     "@lobehub/chat-plugin-sdk": "latest",
     "@lobehub/chat-plugins-gateway": "latest",
-    "@lobehub/icons": "latest",
+    "@lobehub/icons": "^1.21.0",
     "@lobehub/tts": "latest",
     "@lobehub/ui": "^1.138.24",
     "@microsoft/fetch-event-source": "^2.0.1",
