--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "@lobehub/tts": "latest",
     "@lobehub/ui": "^1.139.0",
     "@microsoft/fetch-event-source": "^2.0.1",
-    "@next/third-parties": "^14.2.3",
+    "@next/third-parties": "^15.0.0-rc.0",
     "@sentry/nextjs": "^7.116.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@trpc/client": "next",
@@ -134,7 +134,7 @@
     "lucide-react": "latest",
     "modern-screenshot": "^4.4.39",
     "nanoid": "^5.0.7",
-    "next": "^14.2.3",
+    "next": "15.0.0-rc.0",
     "next-auth": "5.0.0-beta.15",
     "next-sitemap": "^4.2.3",
     "numeral": "^2.0.6",
@@ -147,8 +147,8 @@
     "pwa-install-handler": "^2.6.0",
     "query-string": "^9.0.0",
     "random-words": "^2.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0-rc-4c2e457c7c-20240522",
+    "react-dom": "19.0.0-rc-4c2e457c7c-20240522",
     "react-hotkeys-hook": "^4.5.0",
     "react-i18next": "^14.1.1",
     "react-layout-kit": "^1.9.0",
@@ -185,8 +185,8 @@
     "@lobehub/i18n-cli": "^1.18.1",
     "@lobehub/lint": "^1.23.4",
     "@lobehub/seo-cli": "^1.4.1",
-    "@next/bundle-analyzer": "^14.2.3",
-    "@next/eslint-plugin-next": "^14.2.3",
+    "@next/bundle-analyzer": "^15.0.0-rc.0",
+    "@next/eslint-plugin-next": "^15.0.0-rc.0",
     "@peculiar/webcrypto": "^1.4.6",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
@@ -209,6 +209,7 @@
     "@umijs/lint": "^4.2.5",
     "@vitest/coverage-v8": "~1.2.2",
     "ajv-keywords": "^5.1.0",
+    "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
     "commitlint": "^19.3.0",
     "consola": "^3.2.3",
     "dpdm": "^3.14.0",
