Update `package.json` with `latest` tag. When installing packages, always keeps the latest version.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lobehub/chat",
-  "version": "0.161.20",
+  "version": "0.161.15",
   "description": "Lobe Chat - an open-source, high-performance chatbot framework that supports speech synthesis, multimodal, and extensible Function Call plugin system. Supports one-click free deployment of your private ChatGPT/LLM web application.",
   "keywords": [
     "framework",
@@ -81,164 +81,164 @@
     ]
   },
   "dependencies": {
-    "@ant-design/icons": "^5.3.7",
-    "@anthropic-ai/sdk": "^0.20.9",
-    "@auth/core": "0.28.0",
-    "@aws-sdk/client-bedrock-runtime": "^3.583.0",
-    "@aws-sdk/client-s3": "^3.583.0",
-    "@aws-sdk/s3-request-presigner": "^3.583.0",
-    "@azure/openai": "1.0.0-beta.12",
-    "@cfworker/json-schema": "^1.12.8",
-    "@clerk/localizations": "2.0.0",
-    "@clerk/nextjs": "^5.1.2",
-    "@clerk/themes": "^2.1.7",
-    "@google/generative-ai": "^0.11.4",
-    "@icons-pack/react-simple-icons": "^9.5.0",
-    "@khmyznikov/pwa-install": "^0.3.9",
-    "@lobehub/chat-plugin-sdk": "^1.32.3",
-    "@lobehub/chat-plugins-gateway": "^1.9.0",
-    "@lobehub/icons": "^1.22.1",
-    "@lobehub/tts": "^1.24.1",
-    "@lobehub/ui": "^1.141.2",
-    "@microsoft/fetch-event-source": "^2.0.1",
-    "@next/third-parties": "^14.2.3",
-    "@sentry/nextjs": "^7.116.0",
-    "@t3-oss/env-nextjs": "^0.10.1",
+    "@ant-design/icons": "latest",
+    "@anthropic-ai/sdk": "latest",
+    "@auth/core": "latest",
+    "@aws-sdk/client-bedrock-runtime": "latest",
+    "@aws-sdk/client-s3": "latest",
+    "@aws-sdk/s3-request-presigner": "latest",
+    "@azure/openai": "latest",
+    "@cfworker/json-schema": "latest",
+    "@clerk/localizations": "latest",
+    "@clerk/nextjs": "latest",
+    "@clerk/themes": "latest",
+    "@google/generative-ai": "latest",
+    "@icons-pack/react-simple-icons": "latest",
+    "@khmyznikov/pwa-install": "latest",
+    "@lobehub/chat-plugin-sdk": "latest",
+    "@lobehub/chat-plugins-gateway": "latest",
+    "@lobehub/icons": "latest",
+    "@lobehub/tts": "latest",
+    "@lobehub/ui": "latest",
+    "@microsoft/fetch-event-source": "latest",
+    "@next/third-parties": "latest",
+    "@sentry/nextjs": "latest",
+    "@t3-oss/env-nextjs": "latest",
     "@trpc/client": "next",
     "@trpc/next": "next",
     "@trpc/server": "next",
-    "@vercel/analytics": "^1.3.1",
-    "@vercel/speed-insights": "^1.0.11",
-    "ahooks": "^3.8.0",
-    "ai": "3.0.19",
-    "antd": "^5.17.3",
-    "antd-style": "^3.6.2",
-    "brotli-wasm": "^3.0.0",
-    "chroma-js": "^2.4.2",
-    "dayjs": "^1.11.11",
-    "debug": "^4.3.4",
-    "dexie": "^3.2.7",
-    "diff": "^5.2.0",
-    "fast-deep-equal": "^3.1.3",
-    "gpt-tokenizer": "^2.1.2",
-    "i18next": "^23.11.5",
-    "i18next-browser-languagedetector": "^7.2.1",
-    "i18next-resources-to-backend": "^1.2.1",
-    "idb-keyval": "^6.2.1",
-    "immer": "^10.1.1",
-    "ip": "^2.0.1",
-    "jose": "^5.3.0",
-    "langfuse": "^3.11.1",
-    "langfuse-core": "^3.11.1",
-    "lodash-es": "^4.17.21",
+    "@vercel/analytics": "latest",
+    "@vercel/speed-insights": "latest",
+    "ahooks": "latest",
+    "ai": "latest",
+    "antd": "latest",
+    "antd-style": "latest",
+    "brotli-wasm": "latest",
+    "chroma-js": "latest",
+    "dayjs": "latest",
+    "debug": "latest",
+    "dexie": "latest",
+    "diff": "latest",
+    "fast-deep-equal": "latest",
+    "gpt-tokenizer": "latest",
+    "i18next": "latest",
+    "i18next-browser-languagedetector": "latest",
+    "i18next-resources-to-backend": "latest",
+    "idb-keyval": "latest",
+    "immer": "latest",
+    "ip": "latest",
+    "jose": "latest",
+    "langfuse": "latest",
+    "langfuse-core": "latest",
+    "lodash-es": "latest",
     "lucide-react": "latest",
-    "modern-screenshot": "^4.4.39",
-    "nanoid": "^5.0.7",
-    "next": "^14.2.3",
-    "next-auth": "5.0.0-beta.15",
-    "next-sitemap": "^4.2.3",
-    "numeral": "^2.0.6",
-    "nuqs": "^1.17.4",
-    "ollama": "^0.5.1",
-    "openai": "^4.47.1",
-    "pino": "^9.1.0",
-    "polished": "^4.3.1",
-    "posthog-js": "^1.135.2",
-    "pwa-install-handler": "^2.6.0",
-    "query-string": "^9.0.0",
-    "random-words": "^2.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hotkeys-hook": "^4.5.0",
-    "react-i18next": "^14.1.2",
-    "react-layout-kit": "^1.9.0",
-    "react-lazy-load": "^4.0.1",
-    "react-virtuoso": "^4.7.11",
-    "react-wrap-balancer": "^1.1.1",
-    "remark": "^14.0.3",
-    "remark-gfm": "^3.0.1",
-    "remark-html": "^15.0.2",
-    "resolve-accept-language": "^3.1.4",
-    "rtl-detect": "^1.1.2",
-    "semver": "^7.6.2",
-    "sharp": "^0.33.4",
-    "superjson": "^2.2.1",
-    "swr": "^2.2.5",
-    "systemjs": "^6.15.1",
-    "ts-md5": "^1.3.1",
-    "ua-parser-js": "^1.0.37",
-    "url-join": "^5.0.0",
-    "use-merge-value": "^1.2.0",
-    "utility-types": "^3.11.0",
-    "uuid": "^9.0.1",
-    "y-protocols": "^1.0.6",
-    "y-webrtc": "^10.3.0",
-    "yaml": "^2.4.2",
-    "yjs": "^13.6.15",
-    "zod": "^3.23.8",
-    "zustand": "^4.5.2",
-    "zustand-utils": "^1.3.2"
+    "modern-screenshot": "latest",
+    "nanoid": "latest",
+    "next": "latest",
+    "next-auth": "beta",
+    "next-sitemap": "latest",
+    "numeral": "latest",
+    "nuqs": "latest",
+    "ollama": "latest",
+    "openai": "latest",
+    "pino": "latest",
+    "polished": "latest",
+    "posthog-js": "latest",
+    "pwa-install-handler": "latest",
+    "query-string": "latest",
+    "random-words": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-hotkeys-hook": "latest",
+    "react-i18next": "latest",
+    "react-layout-kit": "latest",
+    "react-lazy-load": "latest",
+    "react-virtuoso": "latest",
+    "react-wrap-balancer": "latest",
+    "remark": "latest",
+    "remark-gfm": "latest",
+    "remark-html": "latest",
+    "resolve-accept-language": "latest",
+    "rtl-detect": "latest",
+    "semver": "latest",
+    "sharp": "latest",
+    "superjson": "latest",
+    "swr": "latest",
+    "systemjs": "latest",
+    "ts-md5": "latest",
+    "ua-parser-js": "latest",
+    "url-join": "latest",
+    "use-merge-value": "latest",
+    "utility-types": "latest",
+    "uuid": "latest",
+    "y-protocols": "latest",
+    "y-webrtc": "latest",
+    "yaml": "latest",
+    "yjs": "latest",
+    "zod": "latest",
+    "zustand": "latest",
+    "zustand-utils": "latest"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.3.0",
-    "@ducanh2912/next-pwa": "^10.2.7",
-    "@edge-runtime/vm": "^3.2.0",
-    "@lobehub/i18n-cli": "^1.18.1",
-    "@lobehub/lint": "^1.23.4",
-    "@lobehub/seo-cli": "^1.4.1",
-    "@next/bundle-analyzer": "^14.2.3",
-    "@next/eslint-plugin-next": "^14.2.3",
-    "@peculiar/webcrypto": "^1.4.6",
-    "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^15.0.7",
-    "@types/chroma-js": "^2.4.4",
-    "@types/debug": "^4.1.12",
-    "@types/diff": "^5.2.1",
-    "@types/ip": "^1.1.3",
-    "@types/json-schema": "^7.0.15",
-    "@types/lodash": "^4.17.4",
-    "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.12.12",
-    "@types/numeral": "^2.0.5",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/rtl-detect": "^1.0.3",
-    "@types/semver": "^7.5.8",
-    "@types/systemjs": "^6.13.5",
-    "@types/ua-parser-js": "^0.7.39",
-    "@types/uuid": "^9.0.8",
-    "@umijs/lint": "^4.2.5",
-    "@vitest/coverage-v8": "~1.2.2",
-    "ajv-keywords": "^5.1.0",
-    "commitlint": "^19.3.0",
-    "consola": "^3.2.3",
-    "dpdm": "^3.14.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-mdx": "^2.3.4",
-    "fake-indexeddb": "^5.0.2",
-    "glob": "^10.4.1",
-    "gray-matter": "^4.0.3",
-    "happy-dom": "^14.11.0",
-    "husky": "^9.0.11",
-    "just-diff": "^6.0.2",
-    "lint-staged": "^15.2.5",
-    "lodash": "^4.17.21",
-    "markdown-table": "^3.0.3",
-    "node-fetch": "^3.3.2",
-    "node-gyp": "^10.1.0",
-    "p-map": "^7.0.2",
-    "prettier": "^3.2.5",
-    "remark-cli": "^11.0.0",
-    "remark-parse": "^10.0.2",
-    "semantic-release": "^21.1.2",
-    "stylelint": "^15.11.0",
-    "tsx": "^4.11.0",
-    "typescript": "^5.4.5",
-    "unified": "^11.0.4",
-    "unist-util-visit": "^5.0.0",
-    "vite": "^5.2.11",
-    "vitest": "~1.2.2",
-    "vitest-canvas-mock": "^0.3.3"
+    "@commitlint/cli": "latest",
+    "@ducanh2912/next-pwa": "latest",
+    "@edge-runtime/vm": "latest",
+    "@lobehub/i18n-cli": "latest",
+    "@lobehub/lint": "latest",
+    "@lobehub/seo-cli": "latest",
+    "@next/bundle-analyzer": "latest",
+    "@next/eslint-plugin-next": "latest",
+    "@peculiar/webcrypto": "latest",
+    "@testing-library/jest-dom": "latest",
+    "@testing-library/react": "latest",
+    "@types/chroma-js": "latest",
+    "@types/debug": "latest",
+    "@types/diff": "latest",
+    "@types/ip": "latest",
+    "@types/json-schema": "latest",
+    "@types/lodash": "latest",
+    "@types/lodash-es": "latest",
+    "@types/node": "latest",
+    "@types/numeral": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "@types/rtl-detect": "latest",
+    "@types/semver": "latest",
+    "@types/systemjs": "latest",
+    "@types/ua-parser-js": "latest",
+    "@types/uuid": "latest",
+    "@umijs/lint": "latest",
+    "@vitest/coverage-v8": "latest",
+    "ajv-keywords": "latest",
+    "commitlint": "latest",
+    "consola": "latest",
+    "dpdm": "latest",
+    "eslint": "latest",
+    "eslint-plugin-mdx": "latest",
+    "fake-indexeddb": "latest",
+    "glob": "latest",
+    "gray-matter": "latest",
+    "happy-dom": "latest",
+    "husky": "latest",
+    "just-diff": "latest",
+    "lint-staged": "latest",
+    "lodash": "latest",
+    "markdown-table": "latest",
+    "node-fetch": "latest",
+    "node-gyp": "latest",
+    "p-map": "latest",
+    "prettier": "latest",
+    "remark-cli": "latest",
+    "remark-parse": "latest",
+    "semantic-release": "latest",
+    "stylelint": "latest",
+    "tsx": "latest",
+    "typescript": "latest",
+    "unified": "latest",
+    "unist-util-visit": "latest",
+    "vite": "latest",
+    "vitest": "~latest",
+    "vitest-canvas-mock": "latest"
   },
   "publishConfig": {
     "access": "public",
