--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -7,9 +7,11 @@ body:
     attributes:
       label: '📦 Environment'
       options:
-        - label: 'Official'
         - label: 'Official Preview'
-        - label: 'Vercel / Zeabur / Sealos'
+        - label: 'Vercel'
+        - label: 'Zeabur'
+        - label: 'Sealos'
+        - label: 'Netlify'
         - label: 'Docker'
         - label: 'Other'
     validations:
