--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -6,14 +6,15 @@ body:
   - type: dropdown
     attributes:
       label: '📦 Environment'
+      multiple: true
       options:
-        - label: 'Official Preview'
-        - label: 'Vercel'
-        - label: 'Zeabur'
-        - label: 'Sealos'
-        - label: 'Netlify'
-        - label: 'Docker'
-        - label: 'Other'
+        - 'Official Preview'
+        - 'Vercel'
+        - 'Zeabur'
+        - 'Sealos'
+        - 'Netlify'
+        - 'Docker'
+        - 'Other'
     validations:
       required: true
   - type: input
@@ -25,25 +26,27 @@ body:
   - type: dropdown
     attributes:
       label: '💻 Operating System'
+      multiple: true
       options:
-        - label: 'Windows'
-        - label: 'macOS'
-        - label: 'Ubuntu'
-        - label: 'Other Linux'
-        - label: 'iOS'
-        - label: 'Android'
-        - label: 'Other'
+        - 'Windows'
+        - 'macOS'
+        - 'Ubuntu'
+        - 'Other Linux'
+        - 'iOS'
+        - 'Android'
+        - 'Other'
     validations:
       required: true
   - type: dropdown
     attributes:
       label: '🌐 Browser'
+      multiple: true
       options:
-        - label: 'Chrome'
-        - label: 'Edge'
-        - label: 'Safari'
-        - label: 'Firefox'
-        - label: 'Other'
+        - 'Chrome'
+        - 'Edge'
+        - 'Safari'
+        - 'Firefox'
+        - 'Other'
     validations:
       required: true
   - type: textarea
