--- a/.github/ISSUE_TEMPLATE/1_bug_report_cn.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report_cn.yml
@@ -6,12 +6,15 @@ body:
   - type: checkboxes
     attributes:
       label: '📦 部署环境'
+      multiple: true
       options:
-        - label: 'Official'
-        - label: 'Official Preview'
-        - label: 'Vercel / Zeabur / Sealos'
-        - label: 'Docker'
-        - label: 'Other'
+        - 'Official Preview'
+        - 'Vercel'
+        - 'Zeabur'
+        - 'Sealos'
+        - 'Netlify'
+        - 'Docker'
+        - 'Other'
     validations:
       required: true
   - type: input
@@ -23,25 +26,27 @@ body:
   - type: checkboxes
     attributes:
       label: '💻 系统环境'
+      multiple: true
       options:
-        - label: 'Windows'
-        - label: 'macOS'
-        - label: 'Ubuntu'
-        - label: 'Other Linux'
-        - label: 'iOS'
-        - label: 'Android'
-        - label: 'Other'
+        - 'Windows'
+        - 'macOS'
+        - 'Ubuntu'
+        - 'Other Linux'
+        - 'iOS'
+        - 'Android'
+        - 'Other'
     validations:
       required: true
   - type: checkboxes
     attributes:
       label: '🌐 浏览器'
+      multiple: true
       options:
-        - label: 'Chrome'
-        - label: 'Edge'
-        - label: 'Safari'
-        - label: 'Firefox'
-        - label: 'Other'
+        - 'Chrome'
+        - 'Edge'
+        - 'Safari'
+        - 'Firefox'
+        - 'Other'
     validations:
       required: true
   - type: textarea
