🐛 fix: fix and improve tool calling

--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
     "nuqs": "^1.17.4",
     "ollama": "^0.5.1",
     "openai": "^4.47.1",
+    "partial-json": "^0.1.7",
     "pg": "^8.11.5",
     "pino": "^9.1.0",
     "polished": "^4.3.1",
