--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
-    "@anthropic-ai/sdk": "^0.21.0",
+    "@anthropic-ai/sdk": "^0.23.0",
     "@auth/core": "0.28.0",
     "@aws-sdk/client-bedrock-runtime": "^3.583.0",
     "@aws-sdk/client-s3": "^3.583.0",
@@ -109,7 +109,7 @@
     "@lobehub/chat-plugins-gateway": "^1.9.0",
     "@lobehub/icons": "^1.23.0",
     "@lobehub/tts": "^1.24.1",
-    "@lobehub/ui": "^1.143.3",
+    "@lobehub/ui": "^1.143.5",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@neondatabase/serverless": "^0.9.3",
     "@next/third-parties": "^14.2.3",
@@ -154,6 +154,7 @@
     "nuqs": "^1.17.4",
     "ollama": "^0.5.1",
     "openai": "^4.47.1",
+    "partial-json": "^0.1.7",
     "pg": "^8.11.5",
     "pino": "^9.1.0",
     "polished": "^4.3.1",
